--- a/BaseGUI/src/fxml/user/BooksWindow.fxml
+++ b/BaseGUI/src/fxml/user/BooksWindow.fxml
@@ -1,37 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.BooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="760.0" style="-fx-background-color: #ffffff;" stylesheets="@../../css/TableViewStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.BooksWindowController">
    <children>
-      <Button layoutX="161.0" layoutY="200.0" mnemonicParsing="false" onAction="#searchAction" prefHeight="25.0" prefWidth="78.0" text="Search" />
-      <Button layoutX="24.0" layoutY="300.0" mnemonicParsing="false" onAction="#reservationAction" text="Reservation" />
-      <Button layoutX="24.0" layoutY="349.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="25.0" prefWidth="78.0" text="Menu" />
-      <TextField fx:id="authorTextField" layoutX="90.0" layoutY="113.0" />
-      <TextField fx:id="titleTextField" layoutX="90.0" layoutY="71.0" />
-      <TextField fx:id="ISBNtextField" layoutX="90.0" layoutY="162.0" />
-      <CheckBox fx:id="checkBoxTitle" layoutX="14.0" layoutY="75.0" mnemonicParsing="false" text="Title" />
-      <CheckBox fx:id="checkBoxAuthor" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Author" />
-      <CheckBox fx:id="checkBoxISBN" layoutX="14.0" layoutY="166.0" mnemonicParsing="false" text="ISBN" />
-      <Text layoutX="260.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Books">
-         <font>
-            <Font name="Arial Bold" size="26.0" />
-         </font>
-      </Text>
-      <TableView fx:id="booksTableView" layoutX="274.0" layoutY="62.0" prefHeight="327.0" prefWidth="301.0">
+      <TableView fx:id="booksTableView" layoutX="263.0" layoutY="63.0" prefHeight="327.0" prefWidth="475.0">
         <columns>
-          <TableColumn fx:id="tableColumnTitle" prefWidth="75.0" text="Title" />
-          <TableColumn fx:id="tableColumnAuthor" prefWidth="75.0" text="Author" />
-            <TableColumn fx:id="tableColumnISBN" prefWidth="75.0" text="ISBN" />
-            <TableColumn fx:id="tableColumnAvailable" prefWidth="75.0" text="Available" />
+          <TableColumn fx:id="tableColumnTitle" prefWidth="120.0" text="Title" />
+          <TableColumn fx:id="tableColumnAuthor" prefWidth="120.0" text="Author" />
+            <TableColumn fx:id="tableColumnISBN" prefWidth="120.0" text="ISBN" />
+            <TableColumn fx:id="tableColumnAvailable" prefWidth="100.0" text="Available" />
         </columns>
       </TableView>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="24.0" layoutY="350.0" onAction="#menuAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="20.0" prefWidth="106.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="MENU" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="reservationButton" buttonType="RAISED" layoutX="24.0" layoutY="307.0" onAction="#reservationAction" onMouseEntered="#reservationMouseEntered" onMouseExited="#reservationMouseExited" prefHeight="20.0" prefWidth="106.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="RESERVATION" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="114.0" layoutY="226.0" onAction="#searchAction" onMouseEntered="#searchMouseEntered" onMouseExited="#searchMouseExited" prefHeight="25.0" prefWidth="79.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="SEARCH" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <Text layoutX="335.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Books" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="32.0" />
+         </font>
+         <effect>
+            <DropShadow color="#c6c6c6" />
+         </effect>
+      </Text>
+      <JFXTextField fx:id="textFieldTitle" labelFloat="true" layoutX="36.0" layoutY="60.0" promptText="Title">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="textFieldAuthor" labelFloat="true" layoutX="36.0" layoutY="120.0" promptText="Author">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="textFieldISBN" labelFloat="true" layoutX="36.0" layoutY="180.0" promptText="ISBN">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </JFXTextField>
    </children>
 </Pane>
