--- a/BaseGUI/src/fxml/user/SettingsWindow.fxml
+++ b/BaseGUI/src/fxml/user/SettingsWindow.fxml
@@ -1,68 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.SettingsWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="470.0" prefWidth="410.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.user.SettingsWindowController">
    <children>
-      <Button layoutX="254.0" layoutY="369.0" mnemonicParsing="false" onAction="#saveAction" prefHeight="25.0" prefWidth="54.0" text="Save" />
-      <Button layoutX="157.0" layoutY="369.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="25.0" prefWidth="54.0" text="Menu" />
-      <TextField fx:id="firstNameField" layoutX="157.0" layoutY="59.0" />
-      <TextField fx:id="lastNameField" layoutX="157.0" layoutY="99.0" />
-      <PasswordField fx:id="passwordField" layoutX="157.0" layoutY="139.0" />
-      <TextField fx:id="cityField" layoutX="157.0" layoutY="179.0" />
-      <TextField fx:id="addressField" layoutX="157.0" layoutY="219.0" />
-      <TextField fx:id="postalCodeField" layoutX="157.0" layoutY="259.0" />
-      <TextField fx:id="telephoneField" layoutX="157.0" layoutY="299.0" />
-      <TextField fx:id="emailField" layoutX="157.0" layoutY="339.0" />
-      <Text layoutX="149.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings">
+      <Text layoutX="145.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER">
          <font>
-            <Font name="Arial Bold" size="26.0" />
+            <Font name="System Bold Italic" size="32.0" />
          </font>
+         <effect>
+            <DropShadow color="#c6c6c6" />
+         </effect>
       </Text>
-      <Text layoutX="73.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name:">
+      <JFXTextField fx:id="firstNameField" labelFloat="true" layoutX="24.0" layoutY="85.0" promptText="First Name">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="74.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name:">
+      </JFXTextField>
+      <JFXTextField fx:id="lastNameField" labelFloat="true" layoutX="217.0" layoutY="85.0" promptText="Last Name">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="81.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+      </JFXTextField>
+      <JFXTextField fx:id="cityField" labelFloat="true" layoutX="24.0" layoutY="215.0" promptText="City">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="114.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City:">
+      </JFXTextField>
+      <JFXTextField fx:id="addressField" labelFloat="true" layoutX="217.0" layoutY="215.0" promptText="Address">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="92.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address:">
+      </JFXTextField>
+      <JFXTextField fx:id="postalCodeField" labelFloat="true" layoutX="24.0" layoutY="275.0" promptText="Postal Code">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="68.0" layoutY="277.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Postal Code:">
+      </JFXTextField>
+      <JFXTextField fx:id="telephoneField" labelFloat="true" layoutX="24.0" layoutY="345.0" promptText="Telephone">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="78.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telephone:">
+      </JFXTextField>
+      <JFXTextField fx:id="emailField" labelFloat="true" layoutX="217.0" layoutY="345.0" promptText="E-mail">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
-      <Text layoutX="103.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="E-mail:">
+      </JFXTextField>
+      <JFXPasswordField fx:id="passwordField" labelFloat="true" layoutX="24.0" layoutY="145.0" promptText="Password">
          <font>
-            <Font name="Times New Roman Bold" size="15.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
-      </Text>
+      </JFXPasswordField>
+      <JFXButton fx:id="saveButton" buttonType="RAISED" layoutX="240.0" layoutY="415.0" onAction="#saveAction" onMouseEntered="#saveMouseEntered" onMouseExited="#saveMouseExited" prefHeight="25.0" prefWidth="106.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="SAVE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="46.0" layoutY="415.0" onAction="#menuAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="20.0" prefWidth="106.0" ripplerFill="#0d47a1" style="-fx-background-color: #2196f3;" text="MENU" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
    </children>
 </Pane>
