--- a/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
@@ -1,43 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: #ffcc80;" stylesheets="@../../css/BorrowedBooksWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
    <children>
-      <Text layoutX="307.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Borrowed Books">
+      <JFXTextField fx:id="textFieldLibraryCardNumber" focusColor="BLACK" labelFloat="true" layoutX="26.0" layoutY="76.0" promptText="Library card number" unFocusColor="RED">
          <font>
-            <Font name="Arial Bold" size="26.0" />
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </JFXTextField>
+      <Text layoutX="286.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Borrowed Books">
+         <font>
+            <Font name="System Bold Italic" size="30.0" />
          </font>
       </Text>
-      <Button layoutX="30.0" layoutY="161.0" mnemonicParsing="false" onAction="#returnedAction" text="Returned">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="339.0" layoutY="73.0" mnemonicParsing="false" onAction="#searchAction" prefHeight="25.0" prefWidth="65.0" text="Search" />
-      <TextField fx:id="textFieldLibraryCardNumber" layoutX="174.0" layoutY="73.0" />
-      <Text layoutX="19.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Library card number">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Text>
-      <Button layoutX="30.0" layoutY="228.0" mnemonicParsing="false" onAction="#deleteAction" prefHeight="27.0" prefWidth="86.0" text="Delete">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="30.0" layoutY="303.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="27.0" prefWidth="86.0" text="Menu">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Button>
-      <TableView fx:id="borrowsTableView" layoutX="139.0" layoutY="117.0" prefHeight="274.0" prefWidth="651.0">
+      <TableView fx:id="borrowsTableView" layoutX="139.0" layoutY="117.0" prefHeight="274.0" prefWidth="651.0" style="-fx-border-color: Black;">
         <columns>
           <TableColumn fx:id="tableColumnTitle" prefWidth="75.0" text="Title" />
           <TableColumn fx:id="tableColumnAuthor" prefWidth="75.0" text="Author" />
@@ -49,5 +32,25 @@
             <TableColumn fx:id="tableColumnExpirationDate" prefWidth="100.0" text="Expiration date" />
         </columns>
       </TableView>
+      <JFXButton fx:id="returnedButton" buttonType="RAISED" layoutX="26.0" layoutY="149.0" onAction="#returnedAction" onMouseEntered="#returnedMouseEntered" onMouseExited="#returnedMouseExited" prefHeight="40.0" prefWidth="94.0" ripplerFill="#a10e0e" style="-fx-background-color: #ef6c00;" text="RETURNED" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="deleteButton" buttonType="RAISED" layoutX="26.0" layoutY="222.0" onAction="#deleteAction" onMouseEntered="#deleteMouseEntered" onMouseExited="#deleteMouseExited" prefHeight="40.0" prefWidth="94.0" ripplerFill="#a10e0e" style="-fx-background-color: #ef6c00;" text="DELETE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="26.0" layoutY="299.0" onAction="#menuAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="40.0" prefWidth="94.0" ripplerFill="#a10e0e" style="-fx-background-color: #ef6c00;" text="MENU" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="214.0" layoutY="78.0" onAction="#searchAction" onMouseEntered="#searchMouseEntered" onMouseExited="#searchMouseExited" prefHeight="25.0" prefWidth="72.0" ripplerFill="#a10e0e" style="-fx-background-color: #ef6c00;" text="Search" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
    </children>
 </Pane>
