--- a/BaseGUI/src/fxml/admin/UsersWindow.fxml
+++ b/BaseGUI/src/fxml/admin/UsersWindow.fxml
@@ -1,50 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1077.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.UsersWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="1085.0" style="-fx-background-color: #80cbc4;" stylesheets="@../../css/UsersWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.UsersWindowController">
    <children>
-      <Text layoutX="503.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users">
+      <Text layoutX="497.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users Management">
          <font>
-            <Font name="Arial Bold" size="26.0" />
+            <Font name="System Bold Italic" size="32.0" />
          </font>
       </Text>
-      <TextField fx:id="textFieldID" layoutX="92.0" layoutY="44.0" />
-      <Text layoutX="19.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Text>
-      <Text layoutX="19.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname">
+      <Text layoutX="15.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password change">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font>
       </Text>
-      <Text layoutX="19.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Text>
-      <TextField fx:id="textFieldName" layoutX="92.0" layoutY="84.0" />
-      <TextField fx:id="textFieldSurname" layoutX="92.0" layoutY="121.0" />
-      <Button layoutX="189.0" layoutY="153.0" mnemonicParsing="false" onAction="#searchAction" text="Search" />
-      <Button layoutX="186.0" layoutY="230.0" mnemonicParsing="false" onAction="#submitAction" text="Submit" />
-      <TextField fx:id="textFieldPasswordChange" layoutX="24.0" layoutY="230.0" />
-      <Text layoutX="28.0" layoutY="214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password change">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-      </Text>
-      <Button layoutX="21.0" layoutY="348.0" mnemonicParsing="false" onAction="#menuAction" prefHeight="25.0" prefWidth="51.0" text="Menu" />
-      <Button layoutX="19.0" layoutY="284.0" mnemonicParsing="false" onAction="#deleteAction" prefHeight="25.0" prefWidth="54.0" text="Delete" />
-      <Button layoutX="88.0" layoutY="284.0" mnemonicParsing="false" onAction="#banAction" prefHeight="25.0" prefWidth="54.0" text="Ban" />
-      <TableView fx:id="usersTableView" layoutX="249.0" layoutY="54.0" prefHeight="341.0" prefWidth="826.0">
+      <TableView fx:id="usersTableView" layoutX="249.0" layoutY="54.0" prefHeight="376.0" prefWidth="826.0" style="-fx-border-color: #000000;">
         <columns>
           <TableColumn fx:id="tableColumnLibraryCardNumber" prefWidth="75.0" text="Library card &#10;    number" />
           <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
@@ -59,7 +35,60 @@
             <TableColumn fx:id="tableColumnBanned" prefWidth="75.0" text="Banned" />
         </columns>
       </TableView>
-      <Button layoutX="157.0" layoutY="284.0" mnemonicParsing="false" onAction="#unbanAction" prefHeight="25.0" prefWidth="54.0" text="Unban" />
-      <Button layoutX="98.0" layoutY="348.0" mnemonicParsing="false" onAction="#banInformationAction" text="Ban information" />
+      <JFXTextField fx:id="textFieldID" focusColor="BLACK" labelFloat="true" layoutX="16.0" layoutY="40.0" promptText="Library card number">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="textFieldName" focusColor="BLACK" labelFloat="true" layoutX="16.0" layoutY="100.0" promptText="Name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="textFieldSurname" focusColor="BLACK" labelFloat="true" layoutX="16.0" layoutY="160.0" promptText="Surname">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="textFieldPasswordChange" focusColor="BLACK" layoutX="19.0" layoutY="245.0" promptText="New password">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="179.0" layoutY="160.0" onAction="#searchAction" onMouseEntered="#searchMouseEntered" onMouseExited="#searchMouseExited" prefHeight="25.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Search" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="submitButton" buttonType="RAISED" layoutX="179.0" layoutY="245.0" onAction="#submitAction" onMouseEntered="#submitMouseEntered" onMouseExited="#submitMouseExited" prefHeight="25.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Submit" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="deleteButton" buttonType="RAISED" layoutX="14.0" layoutY="323.0" onAction="#deleteAction" onMouseEntered="#deleteMouseEntered" onMouseExited="#deleteMouseExited" prefHeight="25.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Delete" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="banButton" buttonType="RAISED" layoutX="96.0" layoutY="323.0" onAction="#banAction" onMouseEntered="#banMouseEntered" onMouseExited="#banMouseExited" prefHeight="17.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Ban" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="unbanButton" buttonType="RAISED" layoutX="179.0" layoutY="323.0" onAction="#unbanAction" onMouseEntered="#unbanMouseEntered" onMouseExited="#unbanMouseExited" prefHeight="25.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Unban" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="banInformationButton" buttonType="RAISED" layoutX="133.0" layoutY="387.0" onAction="#banInformationAction" onMouseEntered="#banInformationMouseEntered" onMouseExited="#banInformationMouseExited" prefHeight="25.0" prefWidth="111.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Ban information" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
+      <JFXButton fx:id="menuButton" buttonType="RAISED" layoutX="14.0" layoutY="387.0" onAction="#menuAction" onMouseEntered="#menuMouseEntered" onMouseExited="#menuMouseExited" prefHeight="25.0" prefWidth="65.0" ripplerFill="#0d47a1" style="-fx-background-color: #009688;" text="Menu" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </JFXButton>
    </children>
 </Pane>
