--- a/BaseGUI/src/fxml/admin/ReservationsWindow.fxml
+++ b/BaseGUI/src/fxml/admin/ReservationsWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="895.0" style="-fx-background-color: #ff80ab;" stylesheets="@../../css/ReservationsWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.ReservationsWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="895.0" style="-fx-background-color: #ffffff;" stylesheets="@../../css/ReservationsWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.ReservationsWindowController">
    <children>
       <JFXTextField fx:id="textFieldLibraryCardNumber" focusColor="BLACK" labelFloat="true" layoutX="23.0" layoutY="67.0" promptText="Library card number">
          <font>
