--- a/BaseGUI/src/fxml/StartWindow.fxml
+++ b/BaseGUI/src/fxml/StartWindow.fxml
@@ -22,5 +22,10 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </JFXButton>
+      <Text fontSmoothingType="LCD" layoutX="131.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author: Marcin Seweryn">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
    </children>
 </Pane>
