--- a/BaseGUI/src/fxml/admin/BooksWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BooksWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: #ccff90;" stylesheets="@../../css/BooksWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" stylesheets="@../../css/BooksWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BooksWindowController">
    <children>
       <Separator layoutX="251.0" layoutY="-7.0" orientation="VERTICAL" prefHeight="408.0" prefWidth="15.0" />
       <Text fx:id="saveInfo" layoutX="18.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The data have been saved" wrappingWidth="237.34959506988525">
