--- a/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
+++ b/BaseGUI/src/fxml/admin/BorrowedBooksWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: #ffcc80;" stylesheets="@../../css/BorrowedBooksWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" stylesheets="@../../css/BorrowedBooksWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.BorrowedBooksWindowController">
    <children>
       <JFXTextField fx:id="textFieldLibraryCardNumber" focusColor="BLACK" labelFloat="true" layoutX="26.0" layoutY="76.0" promptText="Library card number" unFocusColor="RED">
          <font>
