--- a/BaseGUI/src/fxml/admin/UsersWindow.fxml
+++ b/BaseGUI/src/fxml/admin/UsersWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="1085.0" style="-fx-background-color: #80cbc4;" stylesheets="@../../css/UsersWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.UsersWindowController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="1085.0" stylesheets="@../../css/UsersWindowStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.admin.UsersWindowController">
    <children>
       <Text layoutX="497.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Users Management">
          <font>
